[gd_scene load_steps=11 format=3 uid="uid://bq5qwedteu6g1"]

[ext_resource type="Script" path="res://scripts/Shop.gd" id="1_lio1j"]
[ext_resource type="Texture2D" uid="uid://bswmky6ppyyf3" path="res://graphics/areaElements/shop.png" id="2_8vhoq"]
[ext_resource type="Texture2D" uid="uid://m0qxmnky5ipv" path="res://graphics/areaElements/cogwell.png" id="3_gxhab"]
[ext_resource type="Texture2D" uid="uid://vkjdptpgjxfi" path="res://graphics/areaElements/cardDestroyedTeeth.png" id="4_qtp6p"]
[ext_resource type="Texture2D" uid="uid://t4ogtrhe8us3" path="res://graphics/areaElements/cardDestroyer.png" id="5_4tjc2"]
[ext_resource type="Texture2D" uid="uid://ddkgyo0i6l4pd" path="res://graphics/areaElements/shopBackground.png" id="6_en6ut"]
[ext_resource type="PackedScene" uid="uid://bkctt6itl54wc" path="res://objects/Utility/RequestingSlot.tscn" id="7_x7rsn"]
[ext_resource type="Script" path="res://scripts/ShopRequestingSlot.gd" id="8_e5opu"]

[sub_resource type="Animation" id="Animation_tg7ac"]
resource_name = "idle"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Teeth/CardDestroyedTeeth:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-122.698, 111.628), Vector2(-130, 102.628), Vector2(-122.698, 110.628), Vector2(-115.698, 105.628), Vector2(-122.698, 111.628)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Teeth/CardDestroyedTeeth2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-125.305, 110.324), Vector2(-135, 107.324), Vector2(-125.305, 100), Vector2(-115.305, 105.324), Vector2(-125.305, 110.324)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Cogwell:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 3.14159]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Cogwell2:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 3.14159, 6.28319]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("cardDestroyer:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5, 0.7, 0.9, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.0174533, 0.0, 0.0, -0.0174533, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_onyi1"]
_data = {
"idle": SubResource("Animation_tg7ac")
}

[node name="Shop" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_lio1j")

[node name="Shop" type="Sprite2D" parent="."]
position = Vector2(269.5, 406)
scale = Vector2(0.767143, 0.767143)
texture = ExtResource("2_8vhoq")

[node name="Cogwell" type="Sprite2D" parent="Shop"]
z_index = -19
position = Vector2(128.399, -114.711)
scale = Vector2(1.30354, 1.30354)
texture = ExtResource("3_gxhab")

[node name="Cogwell2" type="Sprite2D" parent="Shop"]
z_index = -8
position = Vector2(-151.862, -22.1602)
scale = Vector2(1.30354, 1.30354)
texture = ExtResource("3_gxhab")

[node name="ColorRect" type="ColorRect" parent="Shop"]
z_index = -19
offset_left = -132.0
offset_top = -197.0
offset_right = 111.0
offset_bottom = -113.0
color = Color(0.054902, 0.0509804, 0.0470588, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Shop"]
libraries = {
"": SubResource("AnimationLibrary_onyi1")
}

[node name="Teeth" type="Control" parent="Shop"]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = -153.0
offset_top = -212.0
offset_right = 128.0
offset_bottom = -104.0
pivot_offset = Vector2(151.045, 62.0931)

[node name="CardDestroyedTeeth2" type="Sprite2D" parent="Shop/Teeth"]
z_index = -18
position = Vector2(-125.305, 110.324)
scale = Vector2(0.680141, -0.680141)
texture = ExtResource("4_qtp6p")
offset = Vector2(375.891, 79.795)

[node name="CardDestroyedTeeth" type="Sprite2D" parent="Shop/Teeth"]
z_index = -9
position = Vector2(-122.698, 111.628)
scale = Vector2(0.677852, 0.677852)
texture = ExtResource("4_qtp6p")
offset = Vector2(390.622, -66.6032)

[node name="cardDestroyer" type="Control" parent="Shop"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CardDestroyerUp" type="Sprite2D" parent="Shop/cardDestroyer"]
z_index = -18
position = Vector2(4.56244, -200.745)
scale = Vector2(0.995112, 0.995112)
texture = ExtResource("5_4tjc2")
region_enabled = true
region_rect = Rect2(0, -2, 336, 30.493)

[node name="CardDestroyerDown" type="Sprite2D" parent="Shop/cardDestroyer"]
z_index = -8
position = Vector2(4.56241, -16.946)
scale = Vector2(0.995112, 0.995112)
texture = ExtResource("5_4tjc2")
region_enabled = true
region_rect = Rect2(0, 30.0639, 336, 339.936)

[node name="background" type="Sprite2D" parent="."]
z_index = -20
position = Vector2(270, 262)
scale = Vector2(0.80734, 0.807339)
texture = ExtResource("6_en6ut")

[node name="requestingSlot" parent="." node_paths=PackedStringArray("parentArea") instance=ExtResource("7_x7rsn")]
offset_left = 257.0
offset_top = 234.0
offset_right = 263.0
offset_bottom = 240.0
script = ExtResource("8_e5opu")
parentArea = NodePath("..")
cardLimit = 7
ordering = 0
magazineStack = true

[node name="PositionMarker" type="Control" parent="."]
anchors_preset = 0
offset_left = 253.0
offset_top = 416.0
offset_right = 293.0
offset_bottom = 456.0
